<resources>
    <string name="app_name">ThingSpeakViewer2023BL</string>
    <string name="thingspeak_viewer">ThingSpeak Viewer</string>
    <string name="by_lies_boudhar_2024">by Lies Boudhar 2024</string>
    <string name="connect_to_internet">Connect to Internet</string>
    <string name="send_to">Send To</string>
    <string name="init_data_01">0</string>
    <string name="name">Name</string>
    <string name="field_prompt">Choose a field</string>
    <string name="data_to_send">Data to send</string>
    <string name="write_key">Write Key</string>
    <string name="select_field">Select a field</string>
</resources>